...
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/signinPromptsVLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_green" />

...
        android:id="@+id/signinPromptsVLL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/activityNavButtonsHLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage">

        <LinearLayout
            android:id="@+id/enterUsernameHLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameTV"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Username:"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/usernameEV"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/enterPasswordHLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="32dp">

            <TextView
...
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Password:"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/passwordEV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onSignInClick"
            android:text="Sign In" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="onRegisterClick"
            android:text="Register"
            android:textColor="@color/black" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
...
